# nyisip

./: .clang-format  .clangd  CMakeLists.txt  README.md  file1.txt
examples/: file1.txt  file1.txt.bak  file2.txt  file3.txt  file4.txt
include/nyisip/: alat.h  core.h  nyisip.h
src/: alat.cc  core.cc  main.cc  nyisip.cc
